マテリアルデザインを適用せずに使用可能なように修正

--- a/MaterialWindowLib.Wpf/Themes/MaterialWindow.xaml
+++ b/MaterialWindowLib.Wpf/Themes/MaterialWindow.xaml
@@ -13,14 +13,7 @@
     </ResourceDictionary.MergedDictionaries>
 
     <Style TargetType="ctl:MaterialWindow">
-        <Setter Property="TextElement.Foreground" Value="{DynamicResource MaterialDesignBody}" />
-        <Setter Property="TextElement.FontWeight" Value="Regular" />
-        <Setter Property="TextElement.FontSize" Value="13" />
-        <Setter Property="TextOptions.TextFormattingMode" Value="Ideal" />
-        <Setter Property="TextOptions.TextRenderingMode" Value="Auto" />
-        <Setter Property="Background" Value="{DynamicResource MaterialDesignPaper}" />
-        <Setter Property="FontFamily" Value="{DynamicResource MaterialDesignFont}" />
-        <Setter Property="TitlebarBackground" Value="{DynamicResource PrimaryHueMidBrush}" />
+        <Setter Property="Background" Value="White" />
 
         <Setter Property="Template">
             <Setter.Value>
