--- a/MaterialWindowLib.Demo/MainWindow.xaml
+++ b/MaterialWindowLib.Demo/MainWindow.xaml
@@ -5,6 +5,15 @@
                    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                    xmlns:mw="http://StdEnku/MaterialWindowLib/Wpf"
                    xmlns:local="clr-namespace:MaterialWindowLib.Demo"
+                   xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+                   TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+                   TextElement.FontWeight="Regular"
+                   TextElement.FontSize="13"
+                   TextOptions.TextFormattingMode="Ideal" 
+                   TextOptions.TextRenderingMode="Auto"        
+                   Background="{DynamicResource MaterialDesignPaper}"
+                   FontFamily="{DynamicResource MaterialDesignFont}"
+                   TitlebarBackground="{DynamicResource PrimaryHueMidBrush}"
                    mc:Ignorable="d"
                    Title="Demo">
 
