--- a/MaterialWindowLib.Demo/App.xaml
+++ b/MaterialWindowLib.Demo/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:MaterialWindowLib.Demo"
-             StartupUri="MainWindow.xaml">
+             StartupUri="./Views/MainWindow.xaml">
 
     <Application.Resources>
         <ResourceDictionary>
